fixed alignment issue and completely runs on docker now

--- a/frontend/src/Pages/Reviews.css
+++ b/frontend/src/Pages/Reviews.css
@@ -1,11 +1,12 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 .banner {
   background-color: #7289da; /* Discord's brand color */
-  padding: 10px;
+  padding: 1px;
   display: flex;
   justify-content: flex-end; /* Align buttons to the right */
   position: relative; /* Set position to relative */
   z-index: 1000; /* Ensure it's above other content */
+  width: 100%;
 }
 
 .banner-title {
@@ -13,9 +14,9 @@
   /*font-family: 'Arial', sans-serif; /* Specify your preferred font family */
   font-size: 30px; /* Adjust the font size as needed */
   color: #fff; /* Set text color to white */
-  margin-right: auto; /* Push the title to the left */
+  margin-left: auto; /* Push the title to the left */
+  
 }
-
 
 
 .button, .profile-button {
@@ -60,8 +61,9 @@ body {
 
 .container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
   align-items: left;
+  width: 100%;
 }
 
 .search-container {
@@ -102,6 +104,7 @@ body {
   padding: 10px;
   display: flex;
   align-items: center;
+  width: 100%;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle box shadow */
 }
 
@@ -120,6 +123,7 @@ body {
   border-radius: 5px;
   font-size: 16px;
   margin-right: 10px;
+  margin-left: 10px;
 }
 
 .search-button {
@@ -131,6 +135,7 @@ body {
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
+  margin-bottom: 4px;
   transition: background-color 0.3s;
 }
 
